# pprof-alloc

./: Cargo.toml  DASHBOARD_PROMPT.md  LICENSE  README.md  ROADMAP.md
examples/: allocation_patterns.rs  capture_benchmark.rs
src/: allocator.rs  bt.rs  env.rs  lib.rs
src/pprof/: cast.rs  mappings.rs  mod.rs  perftools.profiles.rs
src/stats/: cgroups.rs  malloc.rs  mod.rs  procmaps.rs  smaps.rs
src/stats/malloc_info/: info.rs  memstream.rs  mod.rs
src/trace/: backtrace.rs  frame_pointer.rs  mod.rs
