[package]
name = "pprof-alloc"
version = "0.1.0"
edition = "2024"

[features]
default = []
allocator-jemalloc = ["dep:tikv-jemalloc-ctl"]
allocator-mimalloc = ["dep:libmimalloc-sys"]

[dependencies]
rand = "0.8"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
crossbeam = "0.8"
backtrace = "0.3"
pprof = "0.11"
jemalloc_pprof = { version = "0.8.1", features = ["symbolize"] }
anyhow = "1.0.100"
flate2 = "1.1.4"
prost = "0.13.5"
cast = "0.3.0"
paste = "1.0.15"
num = "0.4.3"
itertools = "0.14.0"
dashmap = "6.1.0"
lazy_static = "1.5.0"
once_cell = "1.21.3"
tracing = "0.1.41"
libc = "0.2.177"
smallvec = "1.15.1"
tracefp = { version = "0.0.1", default-features = false }
hopframe = "0.2.0"
prehash = "1.0.0"
parking_lot = "0.12.5"
ahash = "0.8.12"
regex = "1.12.2"
human_bytes = "0.4.3"
errno = "0.3.14"
thiserror = "1.0.69"
quick-xml = { version = "0.38.3", features = ["serialize"] }
prometheus-client = "0.24.0"
tikv-jemalloc-ctl = { version = "0.6.1", optional = true, features = ["stats", "use_std"] }
libmimalloc-sys = { version = "0.1", optional = true, features = ["extended"] }

[[example]]
name = "allocation_patterns"
path = "examples/allocation_patterns.rs"
